--- a/css/contact.css
+++ b/css/contact.css
@@ -11,12 +11,13 @@
 .contact-box {
     width: 48%;
     float: left;
-    border: 3px solid blue;
+    border: 3px solid red;
     height: 400px;
     margin-top: 200px;
     margin-left: 15px;
 }
 
-.iframe {
-    margin-top: 50px;
+.contact-content {
+    width: 100%;
+    height: 400px;
 }
